<resources>
    <string name="app_name">썸나우</string>
    <string name="action_settings">설정</string>
    <string name="action_settings2">개인정보취급방침</string>
    <string name="action_settings3">문의 및 의견</string>
    <string name="action_logout">로그아웃</string>

    <string name="text_kakaostory">KakaoStory</string>
    <string name="text_kakaotalk">KakaoTalk</string>
    <string name="text_push">Push</string>
    <string name="text_usermgmt">User Management</string>
    <string name="text_friends">Friends</string>
    <string name="text_login">Login</string>
    <string name="text_storage">Storage API</string>
    <string name="text_chat_list">Chat Lists</string>

    <!-- For user_signup layout -->
    <string name="user_signup_nickname_hint">닉네임</string>
    <string name="user_signup_age_hint">나이</string>
    <string name="user_signup_female">여자</string>
    <string name="user_signup_male">남자</string>


    <!-- For kakaoStory -->
    <string name="kakaostory_user_check_button">Check Story User</string>
    <string name="kakaostory_profile_button">Get Story Profile</string>
    <string name="kakaostory_note_post_button">Post Note</string>
    <string name="kakaostory_photo_post_button">Post Photo</string>
    <string name="kakaostory_link_post_button">Post Link</string>
    <string name="kakaostory_get_post_button">Get Last Photo</string>
    <string name="kakaostory_get_posts_button">Get Recent Posts</string>
    <string name="kakaostory_delete_post_button">Delete Last Post</string>
    <string name="kakaostory_birthday_label">birthday</string>

    <!-- For kakaoTalk -->
    <string name="kakaotalk_profile_button">Get Talk Profile</string>
    <string name="kakaotalk_country_label">country ISO</string>

    <!-- For Push -->
    <string name="push_notification_title">PushSample Notification</string>
    <string name="push_send">Send push msg to me</string>
    <string name="push_tokens">Get push token info</string>
    <string name="push_unregister">Unregister push token</string>
    <string name="push_register">Register push token</string>

    <!-- For Push -->
    <string name="usermgmg_signup_button">가입하기</string>
    <string name="usermgmg_me_button">Me</string>
    <string name="usermgmg_update_profile_button">Update</string>

    <string name="usermgmg_name">Write Your Name</string>
    <string name="usermgmg_age">Write Your Age</string>
    <string name="usermgmg_gender">Write Your Gender</string>

    <string name="com_kakao_profile_nickname">Alias</string>
    <string name="com_kakao_profile_birthday">BirthDay</string>
    <string name="error_message_for_service_unavailable">Unstable network connection. \nPlease try again later.</string>


    <!-- NEW DISIGN -->
    <string name="title_for_kakao_sdk_sample">Kakao SDK Sample</string>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="text_for_login_kakao_account">Log in with Kakao</string>

    <string name="image_upload">Image Upload</string>
    <string name="pick_iamges">Pick Images</string>

    <string name="send_message">Send the message below?</string>

    <string-array name="usermgmg_gender_types">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="text_send_message">Send Message</string>

    <string name="message_type">Choose a message type</string>
    <string-array name="message_types">
        <item>NORMAL</item>
        <item>INVITE</item>
        <item>FEED</item>
    </string-array>

    <string name="text_send_to_me">Send Message to me</string>
</resources>
